--- a/sikkerhet/kommunikasjon.html
+++ b/sikkerhet/kommunikasjon.html
@@ -7,6 +7,8 @@
     <title>Kommunikasjon</title>
 </head>
 <body>
+    <a href="https://larsstaveland.github.io/kommunikasjon.html">Link til Lars</a>">
+    <a href="https://simonfalkeid.github.io/sikkerhet/kommunikajson/komm.html">Link til Simon</a>
 <header>hei</header>
 </body>
 </html>
