--- a/sikkerhet/kommunikasjon.html
+++ b/sikkerhet/kommunikasjon.html
@@ -5,10 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kommunikasjon</title>
+    <link rel="stylesheet" href="kommunikasjon.css">
 </head>
 <body>
-    <a href="https://larsstaveland.github.io/kommunikasjon.html">Link til Lars</a>">
+    <header>Kommunikasjon</header id="header">
+    <main>
+        <br>
+        <br>
+
+
+        <h3>Internett</h3>
+        <article>
+                Internett, nettverk av datamaskiner som kommuniserer med hverandre i henhold til protokollen Internet Protocol (IP).
+                 I årenes løp har mange slike nettverk blitt bygget opp og knyttet sammen til ett stort, verdensomspennende nettverk
+                  som etter hvert har fått egennavnet Internett, men som nå kan skrives med liten i. Ved hjelp av forskjellige tjenester 
+                  som spiller sammen, kan vi bruke internettet til å kommunisere med mennesker og maskiner over hele jordkloden. 
+                  Det finnes også andre nettverk som bygger på den samme teknologien, men som ikke er knyttet til det globale internettet,
+                   blant annet flere nettverk som brukes til etterretning og ulike militære formål.
+        </article>
+
+        <h3>HTML</h3>
+        <article>
+                HTML, formateringsspråk benyttet for å lage hypertekst-dokumenter på World Wide Web. Koder, kalt tagger (eng. tags),
+                 angir funksjonen til en tekst, det vil si om den er en overskrift, et vanlig tekstavsnitt, en tabell, en punktliste 
+                 eller en lenke til annen tekst. En tag kan også endre på utseendet til en tekst, for eksempel ved at ord kursiveres 
+                 eller utheves. HTML-tagger for tekstens funksjon refererer til stilark (også kalt stilsett) der selve utseendet styres: 
+                 I stilsettet avgjøres egenskaper som skrifttype, størrelse, justering, farge og så videre. Dette skillet mellom funksjon
+                 og utforming er spesielt viktig der man ønsker frihet til å bytte utseende uten å endre på hva som skal være overskrift
+                 og hva som skal være vanlig tekst, eller sørge for at hypertekst opprinnelig laget med tanke på pc-er, også skal være 
+                 leselig på enheter med andre typer skjermer, som mobiltelefoner.
+        </article>
+
+        <h3>HTTP/HTTPS</h3>
+        <article>
+            <li>
+                Hypertext Transfer Protocol, kommunikasjonsprotokoll som i hovedsak brukes til å overføre HTML-dokumenter mellom 
+                tjenere og klienter ved hjelp av en transportprotokoll, vanligvis Transfer Control Protocol (TCP). Klienter signaliserer
+                 at de ønsker å bruke denne protokollen ved å benytte "http" som scheme name i URL-adressen til dokumentet.
+            </li>
+            <br>
+            <li>
+                HTTPS er en kommunikasjonsprotokoll som støtter sikker kommunikasjon over et datanettverk. Protokollen sikrer 
+                at man kommuniserer med riktig nett-tjeneste og at informasjonen som overføres ikke kan overvåkes eller endres.
+            </li>
+        </article>
+
+<br>
+<footer>
+    <a href="https://larsstaveland.github.io/kommunikasjon.html">Link til Lars</a>
+    <br>
     <a href="https://simonfalkeid.github.io/sikkerhet/kommunikajson/komm.html">Link til Simon</a>
-<header>hei</header>
+</footer>
+</main>
+
+
+
 </body>
 </html>
