--- a/nettbutikk/public/html/butikk.html
+++ b/nettbutikk/public/html/butikk.html
@@ -5,11 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="../javascript/homebar.js"></script>
+    <link rel="stylesheet" href="../css/butikk.css">
+    <script src="../../butikk.js"></script>
     <title>Butikk</title>
 </head>
-<body>
-    <home-bar title="Nettbutikk" username="Alfred Sweinsteiger"  menu='Til kassen'info="Kampanjer!" ></home-bar>
-    
 
+
+<body>
+<home-bar title="Nettbutikk" username="Alfred Sweinsteiger"  menu='Til kassen'info="Kampanjer!" >    
+</home-bar>
+
+    <div id="varer">
+        <div class="varer1"></div>
+        <div class="varer2"></div>
+        <div class="varer3"></div>
+        <div class="varer4"></div>
+        <div class="varer5"></div>
+    </div>
+
+
+
+
+    
+    <script>
+        setup();
+    </script>
 </body>
 </html>
