--- a/nettbutikk/public/html/butikk.html
+++ b/nettbutikk/public/html/butikk.html
@@ -12,8 +12,7 @@
 
 
 <body>
-<home-bar title="Nettbutikk" username="Alfred Sweinsteiger"  menu='Til kassen'info="Kampanjer!" >    
-</home-bar>
+<home-bar title="Nettbutikk" username="Alfred Sweinsteiger"  menu='Til kassen'info="Kampanjer!" >    </home-bar>
 
     <div id="varer">
         <div class="varer1"></div>
@@ -21,12 +20,10 @@
         <div class="varer3"></div>
         <div class="varer4"></div>
         <div class="varer5"></div>
+
     </div>
 
-
-
-
-    
+   
     <script>
         setup();
     </script>
