--- a/nettbutikk/public/html/korg.html
+++ b/nettbutikk/public/html/korg.html
@@ -9,32 +9,21 @@
     <script src="../js/Homebar.js"></script>
     <link rel="stylesheet" href="../css/butikk.css">
     <script src="../js/butikk.js"></script>
-    <script src="../js/DbForm.js"></script>
-    <script src="../js/DbSelect.js"></script>
     <script src="../js/DbKorg.js"></script>
     <title>Butikk</title>
 </head>
 
 <body>
-    <home-bar title="Nettbutikk" info="Salg!" username="Andreas Rovik">
+    <home-bar title="Nettbutikk" info="Kampanje! Salg!" username="Ole Olsen">
     </home-bar>
 
-    <db-form heading="Kunder" table="kunde" fields="fornavn,etternavn,adresse">
-      <div slot="heading">Kunder</div>
-  </db-form>
-
-  <db-form heading="Varer" table="vare" fields="varenavn,basispris,beholdning">
-      <div slot="heading">Varer</div>
-  </db-form>
-
-    <db-select heading="Våre varer" liste="vareliste" table="vare" buy="true" 
-               fields="varenavn,basispris" where="1=1">
-        <div slot="liste" id="vareliste">
+    <db-korg heading="Din handlekorg" liste="korg" 
+              table="vare" buy="true" fields="varenavn,basispris" where="1=1">
+        <div slot="liste" id="korg">
             <div>
-                <img src="../media/{varenavn}.png" alt="{varenavn}">
+                <img onerror='this.src="../media/noImage.png"' src="../media/{varenavn}.png" alt="{varenavn}">
                 <div class="vare">{varenavn}</div>
                 <div class="pris">Pris {basispris}kr</div>
-                <div class="buy">{buy}</div>
             </div>
         </div>
     </db-select>
