--- a/nettbutikk/public/html/butikk.html
+++ b/nettbutikk/public/html/butikk.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,25 +10,23 @@
     <script src="../js/Homebar.js"></script>
     <link rel="stylesheet" href="../css/butikk.css">
     <script src="../js/butikk.js"></script>
-    <script src="../js/DbForm.js"></script>
     <script src="../js/DbSelect.js"></script>
-    <script src="../js/DbKorg.js"></script>
     <title>Butikk</title>
 </head>
 
 <body>
-    <home-bar title="Nettbutikk" info="Salg!" username="Andreas Rovik">
+    <home-bar title="Nettbutikk" info="Kampanje! Salg!" username="Ole Olsen">
     </home-bar>
-
-    <db-form heading="Kunder" table="kunde" fields="fornavn,etternavn,adresse">
-      <div slot="heading">Kunder</div>
-  </db-form>
-
-  <db-form heading="Varer" table="vare" fields="varenavn,basispris,beholdning">
-      <div slot="heading">Varer</div>
-  </db-form>
-
-    <db-select heading="Våre varer" liste="vareliste" table="vare" buy="true" 
+   <!--
+       // dersom kasse er definert (kass="xxx") da blir
+       // en event xxx generert når knappen under lista klikkes.
+       // en kan da sette opp forskjellige events som kan fanges slik:
+       //   divSelect.addEventListener("xxx", funksjonSomOrdnerOpp);
+       // divSelect er her definert: let divSelect= document.querySelector("db-select")
+       // eller document.getElementById("idTilDBSelect");
+   -->
+    <db-select heading="Våre varer" liste="vareliste" table="vare" 
+               buy="true" kasse="korg"
                fields="varenavn,basispris" where="1=1">
         <div slot="liste" id="vareliste">
             <div>
@@ -38,8 +37,6 @@
             </div>
         </div>
     </db-select>
-
-
     <script>
         setup();
     </script>
