--- a/nettbutikk/public/html/linje.html
+++ b/nettbutikk/public/html/linje.html
@@ -17,17 +17,9 @@
     <home-bar title="Nettbutikk" info="Kampanje! Salg!" username="Ole Olsen">
     </home-bar>
 
-
-    <db-form heading="Kunder" table="kunde" fields="fornavn,etternavn,adresse">
-        <div slot="heading">Kunder</div>
+    <db-form heading="Linje" table="linje" fields="pris,antall,vareid,bestillingsid">
+        <div slot="heading">Bestillingslinje</div>
     </db-form>
-
-    <db-form heading="Varer" table="vare" fields="varenavn,basispris,beholdning">
-        <div slot="heading">Varer</div>
-    </db-form>
-
-
-
     <script>
         setup();
     </script>
