--- a/snake/snake.html
+++ b/snake/snake.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="snake.js"></script>
-    <script src="homebar.js"></script>
     <link rel="stylesheet" href="snake.css">
+    <script src="snake.js"></script>
+    <script src="Homebar.js"></script>
     <title>Snake</title>
 </head>
 <body>
-    <home-bar></home-bar>
+
+    <home-bar heading="Snake"></home-bar>
 
 
-    <div id="brett">
-        div.snake*5000
-    </div>
+<div id="ramme">
+ <div id="brett"> </div>
+</div>
+
+        
 
     <script>
-    setup();
+      setup();
     </script>
 
+    
 </body>
 </html>
