--- a/Komplett/html/hovedkort.html
+++ b/Komplett/html/hovedkort.html
@@ -16,7 +16,7 @@
             title=""
             menu="Bygg en PC!"
             username=""
-            info="<digi-time></digi-time>"
+            info="<digi-time></digi-time>"digi-time
             <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"></home-bar>
             <audio id="lyd" controls src="../media/luciddreams1.wav"></audio>
         </home-bar>
