--- a/Larsgay/html/larsgay.html
+++ b/Larsgay/html/larsgay.html
@@ -34,7 +34,7 @@ body {
 
 /* Style the header */
 header {
-  background-color: #1fc8db;
+  background-color:#00ff00;
   background-image: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #9fb8ad 75%);
   padding: 30px;
   text-align: center;
