--- a/Larsgay/html/larsgay.html
+++ b/Larsgay/html/larsgay.html
@@ -102,16 +102,16 @@ footer {
 
 <section>
   <nav>
-    <ul>
-      <li><a href="#">Stranger gays</a></li>
-      <li><a href="#">Other vidoes</a></li>
-      <li><a href="#">Other videos</a></li>
+    <ul id="gay">
+      <li><a href="https://www.pornhub.com/gayporn/">Stranger gays</a></li>
+      <li><a href="https://www.pornhub.com/gayporn/">Lars e gay</a></li>
+      <li><a href="https://www.pornhub.com/gayporn/">Sykt gay</a></li>
     </ul>
   </nav>
   
   <article>
     <h1>Stranger gays</h1>
-    <video src="larsgayvideo"></video>
+    <video src="https://www.pornhub.com/gayporn/"></video>
   </article>
 </section>
 
