--- a/kortstokk/kortstokk.html
+++ b/kortstokk/kortstokk.html
@@ -12,7 +12,7 @@
 
 
 <div id="kortstokk">
-        <div class="ruterA"> 
+        <div class="ruterA bakside"> 
             <span1>A</span1>
             <span2>A</span2>
             <div class="ruter"></div>
@@ -71,3 +71,4 @@
     
 </body>
 </html>
+
